template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "name": {
            "type": "String"
        },
        "ssh_public_key": {
            "type": "String"
        },
        "masterSize": {
            "type": "String",
            "defaultValue": "Standard_D3_v2"
        },
        "workerSize": {
            "type": "String",
            "defaultValue": "Standard_D3_v2"
        },
        "workerCount": {
            "type": "int",
            "defaultValue": 6
        }
    },
    "variables": {},
    "resources": [
        {
            "type": "Microsoft.Compute/virtualMachines",
            "name": "[parameters('name')]",
            "apiVersion": "2016-04-30-preview",
            "location": "westus",
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[parameters('masterSize')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "Canonical",
                        "offer": "UbuntuServer",
                        "sku": "16.04-LTS",
                        "version": "latest"
                    },
                    "osDisk": {
                        "createOption": "FromImage"
                    }
                },
                "osProfile": {
                    "computerName": "[parameters('name')]",
                    "adminUsername": "spark",
                    "customData": "I2Nsb3VkLWNvbmZpZwpwYWNrYWdlX3VwZ3JhZGU6IHRydWUKcGFja2FnZXM6CiAgLSBvcGVuamRrLTgtamRrCnJ1bmNtZDoKICAtICd3Z2V0IGh0dHBzOi8vZDNrYmNxYTQ5bWliMTMuY2xvdWRmcm9udC5uZXQvc3BhcmstMi4yLjAtYmluLWhhZG9vcDIuNy50Z3ogLU8gL2hvbWUvc3Bhcmsvc3BhcmstMi4yLjAtYmluLWhhZG9vcDIuNy50Z3onCiAgLSB0YXIgLXh6ZiAvaG9tZS9zcGFyay9zcGFyay0yLjIuMC1iaW4taGFkb29wMi43LnRneiAtQyAvaG9tZS9zcGFyay8KICAtIHJtIC9ob21lL3NwYXJrL3NwYXJrLTIuMi4wLWJpbi1oYWRvb3AyLjcudGd6CiAgLSAnd2dldCBodHRwOi8vbWlycm9ycy5vY2YuYmVya [...]
                    "linuxConfiguration": {
                        "disablePasswordAuthentication": true,
                        "ssh": {
                            "publicKeys": [
                                {
                                    "path": "/home/spark/.ssh/authorized_keys",
                                    "keyData": "[parameters('ssh_public_key')]"
                                }
                            ]
                        }
                    },
                    "secrets": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(parameters('name'),'_nic'))]"
                        }
                    ]
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/networkInterfaces', concat(parameters('name'),'_nic'))]"
            ]
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "name": "[concat(parameters('name'),'_nic')]",
            "apiVersion": "2017-06-01",
            "location": "westus",
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAddress": "172.16.1.4",
                            "privateIPAllocationMethod": "Static",
                            "publicIPAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIPAddresses', concat(parameters('name'),'_ip'))]"
                            },
                            "subnet": {
                                "id": "[concat(resourceId('Microsoft.Network/virtualNetworks',concat(parameters('name'),'_vnet')),'/subnets/default')]"
                            },
                            "primary": true,
                            "privateIPAddressVersion": "IPv4"
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', concat(parameters('name'),'_nsg'))]"
                },
                "primary": true,
                "virtualMachine": {
                    "id": "[resourceId('Microsoft.Compute/virtualMachines', parameters('name'))]"
                }
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/publicIPAddresses', concat(parameters('name'),'_ip'))]",
                "[resourceId('Microsoft.Network/virtualNetworks',concat(parameters('name'),'_vnet'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups', concat(parameters('name'),'_nsg'))]"
            ]
        },
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[concat(parameters('name'),'_nsg')]",
            "apiVersion": "2017-06-01",
            "location": "westus",
            "properties": {
                "securityRules": [
                    {
                        "name": "default-allow-ssh",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "22",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1000,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "sparkmaster",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "8080",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1010,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "sparkapp",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "4040",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1011,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "hdfs",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "50070",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1012,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "zeppelin",
                        "properties": {
                            "protocol": "TCP",
                            "sourcePortRange": "*",
                            "destinationPortRange": "9000",
                            "sourceAddressPrefix": "*",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 1013,
                            "direction": "Inbound"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "name": "[concat(parameters('name'),'_ip')]",
            "apiVersion": "2017-06-01",
            "location": "westus",
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Dynamic",
                "idleTimeoutInMinutes": 4,
                "dnsSettings": {
                    "domainNameLabel": "[concat(parameters('name'),'-master')]"
                }
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "name": "[concat(parameters('name'),'_vnet')]",
            "apiVersion": "2017-06-01",
            "location": "westus",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "172.16.1.0/24"
                    ]
                },
                "subnets": [
                    {
                        "name": "default",
                        "properties": {
                            "addressPrefix": "172.16.1.0/24"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachineScaleSets",
            "sku": {
                "name": "[parameters('workerSize')]",
                "tier": "Standard",
                "capacity": "[parameters('workerCount')]"
            },
            "name": "[concat(parameters('name'),'_vmss')]",
            "apiVersion": "2016-04-30-preview",
            "location": "westus",
            "properties": {
                "singlePlacementGroup": true,
                "upgradePolicy": {
                    "mode": "Manual"
                },
                "virtualMachineProfile": {
                    "osProfile": {
                        "computerNamePrefix": "worker",
                        "adminUsername": "spark",
                        "customData": "I2Nsb3VkLWNvbmZpZwpwYWNrYWdlX3VwZ3JhZGU6IHRydWUKcGFja2FnZXM6CiAgLSBvcGVuamRrLTgtamRrCnJ1bmNtZDoKICAtICd3Z2V0IGh0dHBzOi8vZDNrYmNxYTQ5bWliMTMuY2xvdWRmcm9udC5uZXQvc3BhcmstMi4yLjAtYmluLWhhZG9vcDIuNy50Z3ogLU8gL2hvbWUvc3Bhcmsvc3BhcmstMi4yLjAtYmluLWhhZG9vcDIuNy50Z3onCiAgLSB0YXIgLXh2emYgL2hvbWUvc3Bhcmsvc3BhcmstMi4yLjAtYmluLWhhZG9vcDIuNy50Z3ogLUMgL2hvbWUvc3BhcmsvCiAgLSBybSAvaG9tZS9zcGFyay9zcGFyay0yLjIuMC1iaW4taGFkb29wMi43LnRnegogIC0gJ3dnZXQgaHR0cDovL21pcnJvcnMub2NmL [...]
                        "linuxConfiguration": {
                            "disablePasswordAuthentication": true,
                            "ssh": {
                                "publicKeys": [
                                    {
                                        "path": "/home/spark/.ssh/authorized_keys",
                                        "keyData": "[parameters('ssh_public_key')]"
                                    }
                                ]
                            }
                        },
                        "secrets": []
                    },
                    "storageProfile": {
                        "imageReference": {
                            "publisher": "Canonical",
                            "offer": "UbuntuServer",
                            "sku": "16.04-LTS",
                            "version": "latest"
                        },
                        "osDisk": {
                            "createOption": "FromImage"
                        }
                    },
                    "networkProfile": {
                        "networkInterfaceConfigurations": [
                            {
                                "name": "work_nic",
                                "properties": {
                                    "primary": true,
                                    "ipConfigurations": [
                                        {
                                            "name": "nicipconfig",
                                            "properties": {
                                                "subnet": {
                                                    "id": "[concat(resourceId('Microsoft.Network/virtualNetworks',concat(parameters('name'),'_vnet')),'/subnets/default')]"
                                                }
                                            }
                                        }
                                    ]
                                }
                            }
                        ]
                    }
                },
                "overprovision": false
            },
            "dependsOn": [
                "[resourceId('Microsoft.Compute/virtualMachines', parameters('name'))]"
            ]
        }
    ]
}
